--- a/Cards/Cards.csproj
+++ b/Cards/Cards.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C6AE73AA-262C-49D2-B7AA-A04D59D41B0A}</ProjectGuid>
+    <ProjectGuid>{26F4B5EA-5E13-40E1-902F-85AD7B6B0210}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Deck</RootNamespace>
-    <AssemblyName>Deck</AssemblyName>
+    <RootNamespace>Cards</RootNamespace>
+    <AssemblyName>Cards</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -32,17 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CardDeck.cs" />
+    <Compile Include="Card.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <ProjectReference Include="..\Cards\Cards.csproj">
-      <Project>{26F4B5EA-5E13-40E1-902F-85AD7B6B0210}</Project>
-      <Name>Cards</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CardGeneration\CardGeneration.csproj">
-      <Project>{95F5CAC2-1704-4805-817B-483498472E5E}</Project>
-      <Name>CardGeneration</Name>
-    </ProjectReference>
-  </ItemGroup>
 </Project>
