--- a/CardGenerationTest/CardGenerationTest.csproj
+++ b/CardGenerationTest/CardGenerationTest.csproj
@@ -29,17 +29,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.3.2.1\lib\net45\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework, Version=2.6.4.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
-      <Package>nunit</Package>
-    </Reference>
     <Reference Include="Castle.Core">
       <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="Moq">
       <HintPath>..\packages\Moq.4.5.10\lib\net45\Moq.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.3.4.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -54,6 +51,10 @@
     <ProjectReference Include="..\CardGeneration\CardGeneration.csproj">
       <Project>{95F5CAC2-1704-4805-817B-483498472E5E}</Project>
       <Name>CardGeneration</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Cards\Cards.csproj">
+      <Project>{26F4B5EA-5E13-40E1-902F-85AD7B6B0210}</Project>
+      <Name>Cards</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
